--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "serve": "serve out"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.5",
     "@tryghost/content-api": "^1.6.0",
     "cheerio": "^1.0.0-rc.10",
     "crypto-hash": "^2.0.1",
@@ -47,6 +48,7 @@
     "disqus-react": "^1.1.2",
     "email-validator": "^2.0.4",
     "fs": "^0.0.1-security",
+    "iconoir-react": "^4.9.1",
     "lodash.throttle": "^4.1.1",
     "next": "12.0.9",
     "nodemailer": "^6.7.2",
